--- a/about.html
+++ b/about.html
@@ -71,9 +71,9 @@
 <div class="container-fluid text-center">
   <div class="row content">
     <div class="col-sm-2 sidenav">
-      <p><a href="https://github.com/rscarlisle">Github</a></p>
-      <p><a href="https://linkedin.com/in/randallcarlisle">LinkedIn</a></p>
-      <p><a href="https://stackoverflow.com/users/3133402/randy-carlisle">StackOverflow</a></p>
+      <p><a href="https://github.com/rscarlisle?tab=repositories" target="_blank">Github</a></p>
+      <p><a href="https://linkedin.com/in/randallcarlisle" target="_blank">LinkedIn</a></p>
+      <p><a href="https://stackoverflow.com/users/3133402/randy-carlisle" target="_blank">StackOverflow</a></p>
     </div>
     <div class="col-sm-8 text-left">
       <h1>About Me</h1>
