--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <div class="container-fluid text-center">
   <div class="row content">
     <div class="col-sm-2 sidenav">
-      <p><a href="https://github.com/rscarlisle" target="_blank">Github</a></p>
+      <p><a href="https://github.com/rscarlisle?tab=repositories" target="_blank">Github</a></p>
       <p><a href="https://linkedin.com/in/randallcarlisle" target="_blank">LinkedIn</a></p>
       <p><a href="https://stackoverflow.com/users/3133402/randy-carlisle" target="_blank">StackOverflow</a></p>
     </div>
