track daily progress with project files

--- a/projects.html
+++ b/projects.html
@@ -29,6 +29,7 @@
       background-color: #555;
       color: white;
       padding: 15px;
+      margin-top: 62px;
     }
 
     /* On small screens, set height to 'auto' for sidenav and grid */
@@ -83,18 +84,28 @@
       <!-- <h3>Test</h3> -->
       <!-- <p>Lorem ipsum...</p> -->
     </div>
-    <div class="col-sm-2 sidenav">
+    <div class="col-sm-2 sidenav" style="height:580px;">
       <div class="well">
-        <p>Project-1</p>
+
+<!-- <p><a href="https://stackoverflow.com/users/3133402/randy-carlisle" target="_blank">StackOverflow</a></p> -->
+
+
+        <p><a href="html5.html" target="_blank">HTML5</a></p>
       </div>
       <div class="well">
-        <p>Project-2</p>
+        <p><a href="css.html" target="_blank">CSS, SASS, LESS</a></p>
       </div>
       <div class="well">
-        <p>Project-3</p>
+        <p><a href="js_libraries.html" target="_blank">JavaScript Libraries</a></p>
       </div>
       <div class="well">
-        <p>Project-4</p>
+        <p><a href="salesforce.html" target="_blank">Salesforce<a/></p>
+      </div>
+      <div class="well">
+        <p><a href="sf_languages.html" target="_blank">APEX, VisualForce, Lightning</a></p>
+      </div>
+      <div class="well">
+        <p><a href="wordpress.html" target="_blank">WordPress<a/></p>
       </div>
     </div>
   </div>
